add some javadoc and @Schema description